--- a/app/sass/base/_elements.scss
+++ b/app/sass/base/_elements.scss
@@ -29,15 +29,29 @@ nav {
 
     img {
       float: left;
-      height: 56px;
+
+      @include media(min-width $width-small) {
+        height: 48px;
+      }
+      
+      @include media(min-width $width-medium) {
+        height: 56px;
+      }
     }
 
     em {
       float: right;
-      font-size: 2em;
       font-style: normal;
       font-weight: lighter;
       margin: .5em 0 auto 10px;
+
+      @include media(min-width $width-small) {
+        font-size: 1.85em;
+      }
+
+      @include media(min-width $width-medium) {
+        font-size: 2em;
+      }
     }
   }
 }
